--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <table>
     <tr>
       <td>
-        <p><a href="Contact_details.html" target="_blank">Contact</a></p>
+        <p><a href="Contact_details.html" >Contact</a></p>
       </td>
     </tr>
   </table>
